syntax = "proto3";

package cache;

option go_package = ".";

service cache_service {
}